* FIX: Fix typo in the URI of the `deployedHeight` property on the `StaticDeployment` record in the Recordspec model.
* NON-BREAKING: Relax the definition of `fdri:Variable` so that the IAdopt properties `iop:hasProperty` and `iop:hasObjectOfInterest` are optional.
* NEW: Added foaf:homepage property to `fdri:EnvironmentalMonitoringProgramme` and `fdri:EnvironmenalMonitoringNetwork`

DRAFT 0.4.2
-----------

* FIX: Fixed the property URI of RelatedPartyAttribution.agent in the recordspec schema to match the OWL schema.
* FIX: Fixed the class URI of RelatedPartyRole to match the OWL ontology.
* FIX: Correct cardinality of fdri:hasMember

DRAFT 0.4.1
-----------

* NEW: Added new property `fdri:valueType` which can be used on a `schema:PropertyValue` to convey the datatype or class of the value of the property. (#23)
* NEW: Allow property `fdri:valueType` to appear on `fdri:Measure` to convey the expected datatype for observed value of the measure. (#19)
* NEW: Allow property `prov:qualifiedAttribution` with range only `fdri:RelatedPartyAttribution` on `fdri:EnvironmentalMonitoringFacilityType`. This allows the capture of parties related to a category of facilities (e.g. the manufacturer of a type of sensor). (#4)
* NEW: Allow property `skos:altLabel` on `skos:Concept` records in the recordspec schema. (#7)
* NEW: Added new property `fdri:measures` with range `fdri:Measure`. Property is used on `fdri:EnvironmentalMonitoringFacility` to capture the measures that the facility has the capablity to make, or on `fdri:EnvironmentalMonitoringFacilityType` to capture the measures that facilities of that type have the capablity to make. (#5)
* NEW: Allow property `dct:identifier` on the `fdri:EnvironmentalMonitoringFacility` and `fdri:FacilityGroup` in the recordspec schema. (#18)
* NEW: Added new property `fdri:calibrationDue` as an optional property of `fdri:EnvironmentalMonitoringSystem`. (#17)