@@ -13,7 +13,6 @@
     <uri id="Imports Wizard Entry" name="http://www.w3.org/ns/ssn/" uri="https://www.w3.org/ns/ssn/"/>
     <uri id="User Edited Redirect" name="http://www.w3.org/ns/dcat3" uri="dcat3.ttl"/>
     <group id="Folder Repository, directory=, recursive=true, Auto-Update=true, version=2" prefer="public" xml:base="">
-        <uri id="Automatically generated entry, Timestamp=1763632933502" name="http://data.ordnancesurvey.co.uk/ontology/spatialrelations/" uri="spatialrelations.owl"/>
-        <uri id="Automatically generated entry, Timestamp=1763632933502" name="https://w3id.org/iadopt/ont" uri="iadopt-1.0.3.xml"/>
+        <uri id="Automatically generated entry, Timestamp=1765877634737" name="http://data.ordnancesurvey.co.uk/ontology/spatialrelations/" uri="spatialrelations.owl"/>
     </group>
 </catalog>
